--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:unit --watch",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@quasar/extras": "^1.4.0",
@@ -31,6 +33,7 @@
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-imports": "1.5.0",
     "chai": "^4.1.2",
+    "cypress": "^6.8.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
