--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "raw-loader": "^3.1.0",
     "v-runtime-template": "^1.10.0",
     "vue": "^2.6.11",
+    "vue-matomo": "^4.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.2"
   },
