--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "vuex": "^3.1.2"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/plugin-proposal-optional-chaining": "^7.18.9",
         "@vue/cli-plugin-babel": "^3.12.1",
         "@vue/cli-plugin-eslint": "^3.12.1",
         "@vue/cli-plugin-unit-jest": "^4.5.11",
