--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
   "bracketSameLine": false,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
 }
