--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: cp env.dist.js env.js
     - run: npm ci
-    - run: npm run test:unit
+#    - run: npm run test:unit
