--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gregorovius-frontend",
-    "version": "1.8.14-beta",
+    "version": "1.9.0",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
