--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "cypress:run": "cypress run"
     },
     "dependencies": {
+        "@achrinza/node-ipc": "^9.2.9",
         "@quasar/extras": "^1.4.0",
         "axios": "^0.21.1",
         "core-js": "^2.6.11",
@@ -19,7 +20,7 @@
         "quasar": "^1.0.0",
         "raw-loader": "^3.1.0",
         "v-runtime-template": "^1.10.0",
-        "vue": "^2.6.11",
+        "vue": "^2.7.16",
         "vue-matomo": "^4.1.0",
         "vue-photo-zoom-pro": "^2.5.0",
         "vue-router": "^3.0.3",
